--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@ For class 7-A
         <li>Deforestation in the rainforest leads to the loss of trees, which are vital for absorbing carbon dioxide and releasing oxygen.</li>
         <li>Deforestation contributes to climate change by reducing the rainforest's ability to regulate the Earth's climate, and it also endangers the survival of various species by destroying their habitats.</li>
     </ol>
+
+
+    <h1>
+        By Anshuman Kushwaha of class 7 - A
+        in K .V Mangaldoi 
+    </h1>
 </body>
 </html>
