--- a/index.html
+++ b/index.html
@@ -1,62 +1,175 @@
-# Essay
-For class 7-A
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Unseen Passages</title>
+    <title>Environmental Awareness</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        nav ul {
+            list-style: none;
+            background-color: #333;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline;
+            margin: 10px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+            font-size: 28px;
+        }
+
+        p {
+            color: #555;
+            font-size: 18px;
+        }
+
+        .article {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+        }
+
+        .poster {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .slogan {
+            font-size: 24px;
+            color: #333;
+            margin: 10px 0;
+        }
+
+        .actions {
+            text-align: center;
+        }
+
+        .passage {
+            margin: 20px;
+            padding: 10px;
+            background-color: #fff;
+            font-size: 18px;
+        }
+
+        .questions {
+            color: #333;
+            font-size: 22px;
+        }
+
+        .answers {
+            color: #333;
+            font-size: 24px;
+        }
+
+        .footer {
+            text-align: center;
+            font-size: 18px;
+        }
+    </style>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 20px; padding: 0; background-color: #f2f2f2; text-align: center;">
 
-    <h1 style="color: #333; font-size: 28px;">Welcome to Unseen Passages</h1>
+<body>
+    <header>
+        <h1>Environmental Awareness</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <!-- Add more navigation links here -->
+        </ul>
+    </nav>
+    <main>
+        <div class="article">
+            <h2>How to Decrease Environmental Pollution</h2>
+            <p>Environmental pollution is a growing concern that affects the well-being of our planet and all living creatures. As our world faces the detrimental effects of pollution, it becomes imperative for each one of us to take action.</p>
+            <ol>
+                <li><strong>Reduce, Reuse, Recycle:</strong> The three R's are fundamental. Cut down on single-use items, recycle materials, and support products made from recycled materials.</li>
+                <li><strong>Conserve Energy:</strong> Use energy-efficient appliances, turn off lights and electronics when not in use, and consider alternative energy sources like solar power.</li>
+                <li><strong>Limit Vehicle Emissions:</strong> Carpool, use public transportation, or switch to electric vehicles. Regular maintenance and properly inflated tires also reduce emissions.</li>
+                <li><strong>Waste Management:</strong> Dispose of waste properly. Avoid littering and support recycling programs.</li>
+                <li><strong>Protect Water Resources:</strong> Conserve water, avoid dumping hazardous substances, and support clean water initiatives.</li>
+                <li><strong>Plant Trees:</strong> Trees absorb carbon dioxide and release oxygen. Join reforestation efforts.</li>
+                <li><strong>Reduce Chemical Usage:</strong> Use eco-friendly cleaning products and reduce pesticide and herbicide usage.</li>
+                <li><strong>Advocate for Change:</strong> Support policies that promote clean energy and environmental protection.</li>
+            </ol>
+            <p>Our actions today will shape the world of tomorrow. Let's join hands to combat environmental pollution for a cleaner, greener, and healthier future.</p>
+        </div>
 
-    <h2 style="background-color: #333; color: #fff; padding: 10px; font-size: 24px;">Passage 1</h2>
-    <p style="margin: 20px; padding: 10px; background-color: #fff; font-size: 18px;">
-        In the world of birds, there's one species that stands out for its extraordinary abilities - the peregrine falcon. These birds are known for their incredible speed and agility, making them formidable hunters in the avian kingdom.
-    </p>
-    <p style="margin: 20px; padding: 10px; background-color: #fff; font-size: 18px;">
-        Peregrine falcons are known to reach speeds of up to 240 miles per hour while hunting. They use their keen eyesight to spot prey from great heights and then stoop down to capture it with their sharp talons. Their hunting prowess is a marvel of nature.
-    </p>
+        <div class="poster">
+            <img src="polluted_earth.jpg" alt="Polluted Earth">
+            <div class="slogan">"Clean the Earth, Save our Future."</div>
+            <div class="actions">
+                <p><strong>Take Action Today!</strong></p>
+            </div>
+        </div>
 
-    <h3 style="color: #333; font-size: 22px;">Questions:</h3>
-    <ol style="list-style-type: decimal; margin-left: 20px; font-size: 18px;">
-        <li>What makes peregrine falcons stand out among birds?</li>
-        <li>What is their top speed while hunting?</li>
-        <li>How do peregrine falcons capture their prey?</li>
-    </ol>
+        <div class="passage">
+            <h2>Unseen Passage 1</h2>
+            <p>In the world of birds, there's one species that stands out for its extraordinary abilities - the peregrine falcon. These birds are known for their incredible speed and agility, making them formidable hunters in the avian kingdom.</p>
+            <p>Peregrine falcons are known to reach speeds of up to 240 miles per hour while hunting. They use their keen eyesight to spot prey from great heights and then stoop down to capture it with their sharp talons. Their hunting prowess is a marvel of nature.</p>
+            <div class="questions">Questions:</div>
+            <ol>
+                <li>What makes peregrine falcons stand out among birds?</li>
+                <li>What is their top speed while hunting?</li>
+                <li>How do peregrine falcons capture their prey?</li>
+            </ol>
+            <div class="answers">Answers:</div>
+            <ol>
+                <li>Peregrine falcons stand out among birds due to their extraordinary abilities, including incredible speed and agility.</li>
+                <li>Peregrine falcons can reach speeds of up to 240 miles per hour while hunting.</li>
+                <li>Peregrine falcons capture their prey by using their keen eyesight to spot it from great heights and then stooping down to grab it with their sharp talons.</li>
+            </ol>
+        </div>
 
-    <h3 style="color: #333; font-size: 24px;">Answers:</h3>
-    <ol style="list-style-type: decimal; margin-left: 20px; font-size: 18px;">
-        <li>Peregrine falcons stand out among birds due to their extraordinary abilities, including incredible speed and agility.</li>
-        <li>Peregrine falcons can reach speeds of up to 240 miles per hour while hunting.</li>
-        <li>Peregrine falcons capture their prey by using their keen eyesight to spot it from great heights and then stooping down to grab it with their sharp talons.</li>
-    </ol>
+        <div class="passage">
+            <h2>Unseen Passage 2</h2>
+            <p>The rainforest is a vital part of our planet's ecosystem. It's home to countless species of plants and animals, many of which are not found anywhere else. But the rainforest is under threat from deforestation, which results in the loss of biodiversity and contributes to climate change.</p>
+            <p>Trees in the rainforest play a crucial role in absorbing carbon dioxide and releasing oxygen. The destruction of these trees not only reduces their ability to regulate the Earth's climate but also endangers the survival of various species.</p>
+            <div class="questions">Questions:</div>
+            <ol>
+                <li>Why is the rainforest important to our planet's ecosystem?</li>
+                <li>How does deforestation affect the rainforest?</li>
+                <li>What are the consequences of deforestation for climate change and biodiversity?</li>
+            </ol>
+            <div class="answers">Answers:</div>
+            <ol>
+                <li>The rainforest is important to our planet's ecosystem because it is home to numerous unique plant and animal species and plays a crucial role in maintaining global biodiversity.</li>
+                <li>Deforestation in the rainforest leads to the loss of trees, which are vital for absorbing carbon dioxide and releasing oxygen.</li>
+                <li>Deforestation contributes to climate change by reducing the rainforest's ability to regulate the Earth's climate, and it also endangers the survival of various species by destroying their habitats.</li>
+            </ol>
+        </div>
 
-    <h2 style="background-color: #333; color: #fff; padding: 10px; font-size: 24px;">Passage 2</h2>
-    <p style="margin: 20px; padding: 10px; background-color: #fff; font-size: 18px;">
-        The rainforest is a vital part of our planet's ecosystem. It's home to countless species of plants and animals, many of which are not found anywhere else. But the rainforest is under threat from deforestation, which results in the loss of biodiversity and contributes to climate change.
-    </p>
-    <p style="margin: 20px; padding: 10px; background-color: #fff; font-size: 18px;">
-        Trees in the rainforest play a crucial role in absorbing carbon dioxide and releasing oxygen. The destruction of these trees not only reduces their ability to regulate the Earth's climate but also endangers the survival of various species.
-    </p>
-
-    <h3 style="color: #333; font-size: 22px;">Questions:</h3>
-    <ol style="list-style-type: decimal; margin-left: 20px; font-size: 18px;">
-        <li>Why is the rainforest important to our planet's ecosystem?</li>
-        <li>How does deforestation affect the rainforest?</li>
-        <li>What are the consequences of deforestation for climate change and biodiversity?</li>
-    </ol>
-
-    <h3 style="color: #333; font-size: 24px;">Answers:</h3>
-    <ol style="list-style-type: decimal; margin-left: 20px; font-size: 18px;">
-        <li>The rainforest is important to our planet's ecosystem because it is home to numerous unique plant and animal species and plays a crucial role in maintaining global biodiversity.</li>
-        <li>Deforestation in the rainforest leads to the loss of trees, which are vital for absorbing carbon dioxide and releasing oxygen.</li>
-        <li>Deforestation contributes to climate change by reducing the rainforest's ability to regulate the Earth's climate, and it also endangers the survival of various species by destroying their habitats.</li>
-    </ol>
-
-
-    <h1>
-        By Anshuman Kushwaha of class 7 - A
-        in K .V Mangaldoi 
-    </h1>
+        <div class="footer">
+            <p>By Anshuman Kushwaha of Class 7-A in K.V. Mangaldoi</p>
+        </div>
+    </main>
 </body>
+
 </html>
