--- a/index.html
+++ b/index.html
@@ -110,6 +110,47 @@
         .footer {
             text-align: center;
             font-size: 18px;
+        }    .main-heading {
+      font-size: 24px;
+      font-weight: bold;
+      color: #3366FF; /* Blue color for main headings */
+    }
+
+    .sub-heading {
+      font-size: 20px;
+      font-weight: bold;
+      color: #FF9933; /* Orange color for subheadings */
+    }
+
+    .text {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+
+    /* Define specific styles for different sections */
+    .section1 {
+      background-color: #fff; /* White background for section 1 */
+      padding: 10px; /* Add some padding to the section */
+    }
+
+    .section2 {
+      background-color: #f9f9f9; /* Light gray background for section 2 */
+      padding: 10px; /* Add padding to the section */
+    }
+
+    .section3 {
+      background-color: #fff; /* White background for section 3 */
+      padding: 10px; /* Add padding to the section */
+    }
+
+    .section4 {
+      background-color: #f9f9f9; /* Light gray background for section 4 */
+      padding: 10px; /* Add padding to the section */
+    }
+
+    .section5 {
+      background-color: #fff; /* White background for section 5 */
+      padding: 10px; /* Add padding to the section */
         }
     </style>
 </head>
@@ -185,7 +226,7 @@
                 <li>Deforestation in the rainforest leads to the loss of trees, which are vital for absorbing carbon dioxide and releasing oxygen.</li>
                 <li>Deforestation contributes to climate change by reducing the rainforest's ability to regulate the Earth's climate, and it also endangers the survival of various species by destroying their habitats.</li>
             </ol>
-        </div><div class="main-heading">Water</div>
+        </div><div class="main-heading">Water Class 7 Geography Chapter 5</div>
 
   <div class="sub-heading">Water Cycle</div>
   <div class="point">Describes the natural cycle of water changing from liquid to vapor through evaporation, condensation, and precipitation.</div>
