--- a/index.html
+++ b/index.html
@@ -116,43 +116,7 @@
       color: #3366FF; /* Blue color for main headings */
     }
 
-    .sub-heading {
-      font-size: 20px;
-      font-weight: bold;
-      color: #FF9933; /* Orange color for subheadings */
-    }
 
-    .text {
-      font-size: 16px;
-      margin: 10px 0;
-    }
-
-    /* Define specific styles for different sections */
-    .section1 {
-      background-color: #fff; /* White background for section 1 */
-      padding: 10px; /* Add some padding to the section */
-    }
-
-    .section2 {
-      background-color: #f9f9f9; /* Light gray background for section 2 */
-      padding: 10px; /* Add padding to the section */
-    }
-
-    .section3 {
-      background-color: #fff; /* White background for section 3 */
-      padding: 10px; /* Add padding to the section */
-    }
-
-    .section4 {
-      background-color: #f9f9f9; /* Light gray background for section 4 */
-      padding: 10px; /* Add padding to the section */
-    }
-
-    .section5 {
-      background-color: #fff; /* White background for section 5 */
-      padding: 10px; /* Add padding to the section */
-        }
-    </style>
 </head>
 
 <body>
@@ -296,6 +260,41 @@
   <div class="sub-heading">Fishing and Climate Impact</div>
   <div class="point">Convergence of warm and cold currents creates prime fishing areas but can lead to foggy weather affecting navigation.</div>
 
+
+
+
+        <div class="section">
+    <div class="main-heading">Tribes, Nomads, and Settled Communities</div>
+    <div class="sub-heading">Caste-based Societies</div>
+    <div class="text">Society in large parts of the subcontinent was structured by the rules of varna, prescribed by the Brahmanas and accepted by rulers of kingdoms, resulting in increasing social and economic disparities.</div>
+    <div class="text">Under the Delhi Sultans and Mughals, these hierarchical social classes became more pronounced.</div>
+  </div>
+
+  <div class="section">
+    <div class="sub-heading">Tribal Societies</div>
+    <div class="text">Other societies, referred to as tribes, did not conform to Brahmanical rules and were not divided into distinct classes.</div>
+    <div class="text">Tribes were united by kinship and engaged in diverse activities like agriculture, hunting, gathering, and herding, often residing in remote areas.</div>
+    <div class="text">These tribes collectively controlled land and resources, with rules unique to their culture.</div>
+    <div class="text">The subcontinent was home to various influential tribes living in forests, hills, deserts, and remote regions, sometimes clashing with caste-based societies.</div>
+  </div>
+
+  <div class="section">
+    <div class="sub-heading">Interactions and Dependence</div>
+    <div class="text">Caste-based and tribal societies had a complex relationship of conflict and dependence, influencing mutual change.</div>
+  </div>
+
+  <div class="section">
+    <div class="sub-heading">Recording Tribal Histories</div>
+    <div class="text">Tribal people did not maintain written records but passed down rich customs and oral traditions, now used by present-day historians to document tribal histories.</div>
+  </div>
+
+  <div class="section">
+    <div class="sub-heading">Diversity of Tribal People</div>
+    <div class="text">Tribes were present in nearly every region, with varying influence.</div>
+    <div class="text">Influential tribes included the Khokhars, Gakkhars, Langahs, Arghuns, and others in different regions.</div>
+    <div class="text">Eastern regions had Chero chiefdoms, with tribes like Mundas and Santals. The western and southern regions had tribes like Kolis, Berads, Koragas, Vetars, and Bhils, who were engaged in varied activities.</div>
+    <div class="text">Some Bhils became settled agriculturists and zamindars, while Gonds were numerous in Chhattisgarh, Madhya Pradesh, Maharashtra, and Andhra Pradesh.</div>
+  </div>
         <div class="footer">
             <p>By Anshuman Kushwaha of Class 7-A in K.V. Mangaldoi</p>
         </div>
