--- a/index.html
+++ b/index.html
@@ -116,7 +116,14 @@
       color: #3366FF; /* Blue color for main headings */
     }
 
+    
 
+    .section {
+      background-color: #f9f9f9; /* Light gray background for section 4 */
+      padding: 10px; /* Add padding to the section */
+    }
+
+    
 </head>
 
 <body>
