--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <title>Environmental Awareness</title>
     <style>
-    /* CSS Styles */
+  
     body {
-      font-family: Arial, sans-serif;
-    }
-    
+     
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+      }
     .main-heading {
       font-size: 24px;
       font-weight: bold;
@@ -266,9 +269,6 @@
 
   <div class="sub-heading">Fishing and Climate Impact</div>
   <div class="point">Convergence of warm and cold currents creates prime fishing areas but can lead to foggy weather affecting navigation.</div>
-
-
-
 
         <div class="section">
     <div class="main-heading">Tribes, Nomads, and Settled Communities</div>
