--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 
   <div class="sub-heading">Fishing and Climate Impact</div>
   <div class="point">Convergence of warm and cold currents creates prime fishing areas but can lead to foggy weather affecting navigation.</div>
-
+<h1>For Chapter 5 of Politics/ Civics <a href="https://anshu7892011.github.io/PoliticsClass7Ch5/"></h1>
         <div class="section">
-    <div class="main-heading">Tribes, Nomads, and Settled Communities</div>
+    <div class="main-heading">Tribes, Nomads, and Settled Communities Class -7 History chapter 5</div>
     <div class="sub-heading">Caste-based Societies</div>
     <div class="text">Society in large parts of the subcontinent was structured by the rules of varna, prescribed by the Brahmanas and accepted by rulers of kingdoms, resulting in increasing social and economic disparities.</div>
     <div class="text">Under the Delhi Sultans and Mughals, these hierarchical social classes became more pronounced.</div>
