--- a/index.html
+++ b/index.html
@@ -211,7 +211,49 @@
 
   <div class="sub-heading">Fishing and Climate Impact</div>
   <div class="point">Convergence of warm and cold currents creates prime fishing areas but can lead to foggy weather affecting navigation.</div>
-<h1>For Chapter 5 of Politics/ Civics <a href="https://anshu7892011.github.io/PoliticsClass7Ch5/"> Women's Change the World</a>a></h1>
+<h1>For Chapter 5 of Politics/ Civics <a href="https://anshu7892011.github.io/PoliticsClass7Ch5/"> Women's Change the World</a></h1>
+
+        <div class="section">
+    <div class="main-heading">Perceived Occupational Gender Roles</div>
+    <div class="text">1. Gender stereotypes limit career choices, associating women with nurturing roles and men with technical jobs like the army.</div>
+    <div class="text">2. These stereotypes can hinder girls' opportunities in fields such as medicine and engineering.</div>
+    <div class="text">3. Social pressures often prioritize girls' marriage over education and professional aspirations.</div>
+  </div>
+
+  <div class="section">
+    <div class="main-heading">Pressures on Children in Society</div>
+    <div class="text">1. Children face societal pressures from adults and teasing from peers.</div>
+    <div class="text">2. Boys often feel pressured to pursue high-paying jobs and conform to traditional male behavior.</div>
+    <div class="text">3. Early conditioning discourages boys from openly expressing emotions like crying.</div>
+  </div>
+
+  <div class="section">
+    <div class="main-heading">Breaking Stereotypes: Laxmi Lakra's Inspiring Journey</div>
+    <div class="text">1. Laxmi Lakra, from Jharkhand, became the first female engine driver for Northern Railways.</div>
+    <div class="text">2. Laxmi's parents prioritized her education, and she earned a diploma in electronics.</div>
+    <div class="text">3. Her determination and love for challenges led her into traditionally male-dominated fields.</div>
+  </div>
+
+  <div class="section">
+    <div class="main-heading">Learning for Change: Transforming Education Norms</div>
+    <div class="text">1. Historically, education was limited, especially for girls.</div>
+    <div class="text">2. The nineteenth century saw a shift with new ideas about education and schools emerging.</div>
+    <div class="text">3. Women and men championed efforts to establish schools for girls and attain literacy and education.</div>
+  </div>
+
+  <div class="section">
+    <div class="main-heading">The Remarkable Journey of Rashsundari Devi</div>
+    <div class="text">1. Rashsundari Devi, a housewife from West Bengal, defied norms to read and write.</div>
+    <div class="text">2. She secretly taught herself to read and write and authored "Amar Jiban," the first Indian woman's autobiography.</div>
+  </div>
+
+  <div class="section">
+    <div class="main-heading">Challenges in Gender Disparities in Education</div>
+    <div class="text">1. While boys and girls attend school, disparities in the quality of education and access persist.</div>
+    <div class="text">2. Census data shows significant gender gaps in literacy rates.</div>
+    <div class="text">3. Gender gaps continue to be a concern, particularly for Muslim girls and marginalized communities.</div>
+    <div class="text">4. Discrimination against Dalit, Adivasi, and Muslim children contributes to disparities in educational opportunities.</div>
+  </div>
         <div class="section">
     <div class="main-heading">Tribes, Nomads, and Settled Communities Class -7 History chapter 5</div>
     <div class="sub-heading">Caste-based Societies</div>
